# arc

./: .gitignore  .mcp.json  CHANGELOG.md  CODEX_FORGE_NOTES.txt  LICENSE  OPUS_FORGE_NOTES.txt  README.md  RUNME.md  SECURITY.md  _hub.py  arc.py  forge.py  megahub.py  megahub_single.py  package.json  pyproject.toml  smoke_agent.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
demos/naming-sprint/: README.md  prompt-judge.md  prompt-namer.md  prompt-scout.md  run.sh
docs/: AGENTS.md  GUIDE.md  PROTOCOL.md
docs/harnesses/: claude-code.md  claude-cowork.md  codex-cli.md  codex-desktop.md  cursor.md  gemini-cli.md  mcp-host.md
examples/01-game-jam/: OPERATOR_KICKOFF.md  README.md  TEMPLATE.md
examples/01-game-jam/prompts/roles/: content.md  engine.md  pilots.md  playtest.md
examples/01-game-jam/prompts/shared/: game-brief.md  jam-protocol.md
examples/01-game-jam/prompts/start/: README.md  content.md  engine.md  pilots.md  playtest.md
examples/02-cross-machine/: README.md
examples/02-cross-machine/prompts/: host-agent.md  remote-agent.md
examples/03-parallel-coding/: README.md  demo.py
examples/03-parallel-coding/prompts/: library.md  tests.md
examples/04-handoff-memory/: README.md  demo.py
examples/04-handoff-memory/prompts/: ancestor.md  descendant.md
examples/05-rpc-call/: README.md  demo.py
examples/05-rpc-call/prompts/: caller.md  specialist.md
examples/06-human-in-loop/: README.md
examples/06-human-in-loop/prompts/: operator-cheatsheet.md  worker.md
examples/07-install-and-join/: README.md
examples/07-install-and-join/prompts/: agent.md
examples/08-hello-two-agents/: README.md
examples/08-hello-two-agents/prompts/: agent-a.md  agent-b.md
examples/09-draft-and-critique/: README.md
examples/09-draft-and-critique/prompts/: critic.md  writer.md
examples/10-plan-before-code/: README.md
examples/10-plan-before-code/prompts/: proposer.md  skeptic.md
examples/11-knowledge-swap/: README.md
examples/11-knowledge-swap/prompts/: agent-a.md  agent-b.md
examples/12-broadcast-ask/: README.md
examples/12-broadcast-ask/prompts/: asker.md  listener.md
examples/13-shared-scratchpad/: README.md
examples/13-shared-scratchpad/prompts/: agent-a.md  agent-b.md
examples/14-relay-sandbox/: README.md
examples/14-relay-sandbox/prompts/: host-agent.md  sandboxed-agent.md
examples/15-mcp-quickstart/: README.md
examples/15-mcp-quickstart/prompts/: mcp-agent.md
examples/16-run-to-critique/: README.md
examples/16-run-to-critique/prompts/: runner.md  writer.md
megahub/: __init__.py  bridge.py  cli.py  client.py  config.py  dashboard.py  file_relay.py  server.py  smoke_agent.py  storage.py
megahub/examples/: round_robin_handler.py  thread_reply_handler.py
prompts/: short_story_trio.md  smoke_bridge_trio.md
tests/: test_bridge.py  test_canonical_parity.py  test_cli.py  test_edge_cases.py  test_error_handling.py  test_file_relay.py  test_hub.py  test_import_order.py  test_locks.py  test_pidfile.py  test_recovery.py  test_round_robin.py  test_shared_storage.py  test_smoke_agent.py  test_subtasks.py  test_task_workflow.py  test_threads.py  test_v2.py
