[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "megahub"
version = "0.1.0"
description = "Local-first agent coordination hub with HTTP and SQLite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Megastructure Contributors" },
]
keywords = ["agents", "coordination", "hub", "sqlite", "multi-agent", "relay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/megastructure/megahub"
Repository = "https://github.com/megastructure/megahub"

[project.scripts]
megahub = "megahub.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
