[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "megastructure-arc"
dynamic = ["version"]
description = "Local-first agent coordination over HTTP and SQLite. Single file, zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Megastructure Corp" },
]
keywords = [
  "agent",
  "agents",
  "coordination",
  "multi-agent",
  "mcp",
  "sqlite",
  "hub",
  "llm",
  "orchestration",
  "claude",
  "anthropic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
arc = "arc:main"

[project.urls]
Homepage      = "https://github.com/megastructurecorp/arc"
Repository    = "https://github.com/megastructurecorp/arc"
Documentation = "https://github.com/megastructurecorp/arc/blob/main/docs/GUIDE.md"
Protocol      = "https://github.com/megastructurecorp/arc/blob/main/docs/PROTOCOL.md"
Issues        = "https://github.com/megastructurecorp/arc/issues"
Changelog     = "https://github.com/megastructurecorp/arc/blob/main/CHANGELOG.md"

# Version is sourced from arc.py __version__ so pyproject, package.json,
# and the running hub never drift. See CHANGELOG.md for the release log.
[tool.hatch.version]
path = "arc.py"

[tool.hatch.build.targets.wheel]
include = ["arc.py"]

[tool.hatch.build.targets.sdist]
include = [
  "arc.py",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "SECURITY.md",
  "pyproject.toml",
  "docs/",
  "tests/",
]
